[gd_scene load_steps=3 format=2]

[ext_resource path="res://Mechanisms/DropTargets.gd" type="Script" id=1]
[ext_resource path="res://Mechanisms/DropTarget.tscn" type="PackedScene" id=2]

[node name="DropTargets" type="Node2D"]
script = ExtResource( 1 )

[node name="DropTarget" parent="." instance=ExtResource( 2 )]
position = Vector2( -35, 0 )

[node name="DropTarget2" parent="." instance=ExtResource( 2 )]

[node name="DropTarget3" parent="." instance=ExtResource( 2 )]
position = Vector2( 35, 0 )
